--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
 scikit-learn
+opencv-python==4.5.5.64
+tensorflow==2.8.0
+mtcnn==0.1.0
+keras-vggface==0.6
+Keras-Applications==1.0.8
+streamlit==1.8.1
+tqdm==4.64.0
